--- a/buildspec.yml
+++ b/buildspec.yml
@@ -26,5 +26,5 @@ artifacts:
     - dist/**/*
     - package.json
     - node_modules/**/*
-    # - appspec.yml
-    # - scripts/**/*
+    - appspec.yml
+    - scripts/**/*
