--- a/appspec.yml
+++ b/appspec.yml
@@ -11,10 +11,10 @@ permissions:
     owner: ec2-user
     group: ec2-user
 hooks:
-  ApplicationStop:
-    - location: scripts/application_stop.sh
-      timeout: 300
-      runas: ec2-user
+  # ApplicationStop:
+  #   - location: scripts/application_stop.sh
+  #     timeout: 300
+  #     runas: ec2-user
   BeforeInstall:
     - location: scripts/before_install.sh
       timeout: 300
